<resources>
    <string name="app_name">Movie_Booking_Admin</string>
    <string name="navi_home">Home</string>
    <string name="navi_movie">Movie</string>
    <string name="navi_logout">Log out</string>
    <string name="navi_change_password">Change password</string>
    <string name="navi_showtime">Showtime</string>
    <string name="navi_booking">Booking</string>
    <string name="navi_drawer_open">Open navigation drawer</string>
    <string name="navi_drawer_close">Close navigation drawer</string>
</resources>