<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_home"
            android:title="@string/navi_home"
            android:icon="@drawable/home"/>
        <item android:id="@+id/nav_history"
            android:title="@string/navi_movie"
            android:icon="@drawable/movie"/>
        <item android:id="@+id/nav_showtime"
            android:title="@string/navi_showtime"
            android:icon="@drawable/baseline_slideshow_24"/>
        <item android:id="@+id/nav_booking"
            android:title="@string/navi_booking"
            android:icon="@drawable/baseline_shopping_cart_24"/>
        <item android:id="@+id/nav_change_password"
            android:title="@string/navi_change_password"
            android:icon="@drawable/baseline_password_24"/>
        <item android:id="@+id/nav_logout"
            android:title="@string/navi_logout"
            android:icon="@drawable/logout"/>
    </group>
</menu>